--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tauri-apps/api": "^1.2.0",
     "material-react-table": "^1.11.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.3",
