--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,12 +17,14 @@ tauri = { version = "1.2", features = ["dialog-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 datafusion = "24.0.0"
+object_store = {version="0.5.6", features= ["aws"] }
 log = "0.4.17"
 env_logger = "0.10.0"
 aws-credential-types = { version = "0.55.3", features = ["hardcoded-credentials"] }
 aws-sdk-s3 =  "0.28.0" 
 aws-config= "0.55.3"
 typeshare = "1.0.0"
+url = "2.4.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
