--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dataExplorer",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,7 +17,8 @@
     "@tauri-apps/api": "^1.2.0",
     "material-react-table": "^1.11.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.3",
